<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1" >

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/settings_language" />

        <Spinner
            android:id="@+id/spnr_languages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:prompt="@string/settings_language" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1" >

        <TextView
            style="@style/TextViewStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".4"
            android:text="@string/settings_enable_auto_invert" />

        <ToggleButton
            android:id="@+id/btn_enable_auto_invert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:textOff="@string/settings_off"
            android:textOn="@string/settings_on" />
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1" >

        <TextView
                style="@style/TextViewStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".4"
                android:text="@string/settings_detect_graphics" />

        <ToggleButton
                android:id="@+id/btn_detect_graphics"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".6"
                android:textOff="@string/settings_off"
                android:textOn="@string/settings_on" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_ocr_settings_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/close"/>

</LinearLayout>